package v62.lp;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62.lp";
option java_outer_classname = "LPCardUpdateProto";

//添加现场指纹
message LPCardUpdateRequest{
    extend sys.BaseRequest{
        optional LPCardUpdateRequest cmd = 9009;
    }
    required LPCard card = 1;
}

message LPCardUpdateResponse{
    extend sys.BaseResponse{
        optional LPCardUpdateResponse cmd = 9009;
    }
}